--- a/MTA10/mods/deathmatch/_Deathmatch 2010.vcxproj
+++ b/MTA10/mods/deathmatch/_Deathmatch 2010.vcxproj
@@ -69,6 +69,9 @@
     <IntDir Condition="'$(Configuration)|$(Platform)'=='Nightly|Win32'">..\..\..\obj\client\deathmatch\</IntDir>
     <IgnoreImportLibrary Condition="'$(Configuration)|$(Platform)'=='Nightly|Win32'">false</IgnoreImportLibrary>
     <LinkIncremental Condition="'$(Configuration)|$(Platform)'=='Nightly|Win32'">false</LinkIncremental>
+    <TargetName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">deathmatch_d</TargetName>
+    <TargetName Condition="'$(Configuration)|$(Platform)'=='Nightly|Win32'">deathmatch</TargetName>
+    <TargetName Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">deathmatch</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
