--- a/MTA10/game_sa/_game_sa 2008.vcproj
+++ b/MTA10/game_sa/_game_sa 2008.vcproj
@@ -652,6 +652,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CRenderWareExtension.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\CRenderWareSA.cpp"
 				>
 			</File>
@@ -693,6 +697,10 @@
 			</File>
 			<File
 				RelativePath=".\CTextureManagerSA.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\CTextureSA.cpp"
 				>
 			</File>
 			<File
@@ -1161,6 +1169,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CRenderWareExtensionSA.h"
+				>
+			</File>
+			<File
 				RelativePath=".\CRenderWareSA.h"
 				>
 			</File>
@@ -1197,11 +1209,19 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CTexDictionarySA.h"
+				>
+			</File>
+			<File
 				RelativePath=".\CTextSA.h"
 				>
 			</File>
 			<File
 				RelativePath=".\CTextureManagerSA.h"
+				>
+			</File>
+			<File
+				RelativePath=".\CTextureSA.h"
 				>
 			</File>
 			<File
