--- a/MTA10/game_sa/_game_sa 2008.vcproj
+++ b/MTA10/game_sa/_game_sa 2008.vcproj
@@ -652,7 +652,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\CRenderWareExtension.cpp"
+				RelativePath=".\CRenderWareExtensionSA.cpp"
 				>
 			</File>
 			<File
