--- a/mta_gta3_modeL_replacer/src/mta-mod-imp/mta-mod-imp/mta-mod-imp.vcxproj.filters
+++ b/mta_gta3_modeL_replacer/src/mta-mod-imp/mta-mod-imp/mta-mod-imp.vcxproj.filters
@@ -18,11 +18,19 @@
     <ClInclude Include="ipl.h">
       <Filter>Include</Filter>
     </ClInclude>
+    <ClInclude Include="ini.h">
+      <Filter>Include</Filter>
+    </ClInclude>
+    <ClInclude Include="syntax.h">
+      <Filter>Include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="csv.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ipl.cpp" />
     <ClCompile Include="ide.cpp" />
+    <ClCompile Include="ini.cpp" />
+    <ClCompile Include="syntax.cpp" />
   </ItemGroup>
 </Project>
