--- a/MTA10/core/_Core 2008.vcproj
+++ b/MTA10/core/_Core 2008.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9.00"
+	Version="9,00"
 	Name="Client - Core"
 	ProjectGUID="{4C71249E-EA08-4A3D-9AEF-28707ACC6531}"
 	RootNamespace="Client - Core"
@@ -1188,11 +1188,11 @@
 						>
 					</File>
 					<File
-						RelativePath="..\..\MTA10\sdk\game\CBike.h"
+						RelativePath="..\sdk\game\CBicycle.h"
 						>
 					</File>
 					<File
-						RelativePath="..\..\MTA10\sdk\game\CBmx.h"
+						RelativePath="..\..\MTA10\sdk\game\CBike.h"
 						>
 					</File>
 					<File
