*sweep* *sweep* *sweep*

--- a/MTA10/game_sa/_game_sa 2008.vcproj
+++ b/MTA10/game_sa/_game_sa 2008.vcproj
@@ -565,6 +565,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CPadManagerSA.cpp"
+				>
+			</File>
+			<File
 				RelativePath="CPadSA.cpp"
 				>
 			</File>
@@ -1119,6 +1123,10 @@
 			</File>
 			<File
 				RelativePath="Common.h"
+				>
+			</File>
+			<File
+				RelativePath=".\CPadManagerSA.h"
 				>
 			</File>
 			<File
