--- a/MTA10/core/_Core 2008.vcproj
+++ b/MTA10/core/_Core 2008.vcproj
@@ -441,6 +441,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CFileSystem.cpp"
+				>
+			</File>
+			<File
 				RelativePath="CFileSystemHook.cpp"
 				>
 			</File>
@@ -834,6 +838,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CFileSystem.h"
+				>
+			</File>
+			<File
 				RelativePath=".\CFileSystemHook.h"
 				>
 			</File>
@@ -1089,6 +1097,10 @@
 					</File>
 					<File
 						RelativePath="..\sdk\core\CExceptionInformation.h"
+						>
+					</File>
+					<File
+						RelativePath="..\sdk\core\CFileSystemInterface.h"
 						>
 					</File>
 					<File
